--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+{{!-- {{This is where the menu would go}} --}}
 
-{{outlet}}
+<main class="container">
+    {{outlet}}
+</main>
