Setup more of the structure.
Just researching and experimenting still

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,8 @@
-<Collection @collections={{@model}} as |activeCollectionFeedItems|>
-    <Feed @items={{activeCollectionFeedItems}}/>
-</Collection>
+
+{{#if @model}}
+    <Collection @collections={{@model}} as |activeCollectionFeedItems|>
+        <Feed @items={{activeCollectionFeedItems}}/>
+    </Collection>
+{{else}}
+    <NoFeeds/>
+{{/if}}
