Styling the feed and feed item components

--- a/app/components/feed-item.hbs
+++ b/app/components/feed-item.hbs
@@ -1,9 +1,9 @@
 <div class="feed-item">
     <div class="feed-item__left">
-        <img src={{@image}} alt="{{@title}} cover"/>
+        <img class="feed-item__image" src={{@image}} alt="{{@title}} cover"/>
     </div>
     <div class="feed-item__right">
-        <small>{{@url}}</small>
+        <small class="feed-item__url">{{@url}}</small>
         <h1 class="feed-item__title">
             {{@title}}
         </h1>
