--- a/app/components/collection/tabs.hbs
+++ b/app/components/collection/tabs.hbs
@@ -1,6 +1,6 @@
 <ul class="collection-tabs">
     {{#each @tabs as |tab|}}
-    <li class="collection-tabs__tab {{if (isequal @activeTab tab.name) "collection-tabs__tab--active"}}">
+    <li class="collection-tabs__tab {{if (isEqual @activeTab tab.name) "collection-tabs__tab--active"}}">
         <button type="button" {{on "click" (fn @onTabChange tab.index)}}>
             {{tab.name}}
         </button>
