--- a/app/styles/components/_feed-item.scss
+++ b/app/styles/components/_feed-item.scss
@@ -10,26 +10,21 @@ $spacingBetweenFeedItems: 35px;
 }
 
 .feed-item__left {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: center;
   margin-right: 20px;
 }
 
 .feed-item__image {
   width: 120px;
-  height: 100px;
+  height: 100%;
   object-fit: cover;
   border-radius: 3.5px;
 
   @media (min-width: $brk-small) {
     width: 140px;
-    height: 120px;
   }
 
   @media (min-width: $brk-medium) {
     width: 180px;
-    height: 160px;
   }
 }
 
