Made each feed item component a link

--- a/app/components/feed-item.hbs
+++ b/app/components/feed-item.hbs
@@ -1,4 +1,4 @@
-<div class="feed-item">
+<a class="feed-item" href={{@url}} rel="noopener noreferrer" target="_blank">
     <div class="feed-item__left">
         <img class="feed-item__image" src={{@image}} alt="{{@title}} cover"/>
     </div>
@@ -14,4 +14,4 @@
             {{@date}}
         </p>
     </div>
-</div>
+</a>
