Laid out the tabs component a bit
Will need to properly style this. Also added very basic refresh functionality that doesn't actually refresh anything

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import "./components/all";
+@import "icons";
 @import "variables";
 
 html,
@@ -35,6 +36,8 @@ body {
 
   /*Global Styles*/
   color: var(--colour-text);
+
+  padding: 15px;
 }
 
 .container {
