--- a/app/styles/components/_tabs.scss
+++ b/app/styles/components/_tabs.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .collection-tabs {
   display: flex;
   justify-content: space-evenly;
@@ -10,6 +12,24 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+.collection-tabs__refresh-button {
+  @include reset-button-styles;
+}
+
+.collection-tabs__tab {
+  margin-right: 10px;
+
+  button {
+    font-size: var(--fontsize-heading);
+    font-weight: 700;
+    @include reset-button-styles;
+  }
+}
+
+.collection-tabs__tab--active {
+  border-bottom: 2px solid var(--colour-highlight);
 }
