Tab styling and experiments with refreshing collections

--- a/app/components/collection/tabs.hbs
+++ b/app/components/collection/tabs.hbs
@@ -1,5 +1,5 @@
 <nav aria-label="Collection navigation" class="collection-tabs">
-    <button class="collection-tabs__refresh-button" type="button" aria-label="Refresh" disabled={{this.isRefreshBlocked}} {{on "click" this.refreshCollections}}>
+    <button class="collection-tabs__refresh-button" type="button" aria-label="Refresh" disabled={{this.isRefreshBlocked}} {{on "click" @onTabRefresh}}>
         <svg viewBox="0 0 24 24" class="svg-icon svg-icon__refresh">
             <path d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" />
         </svg>
