--- a/app/components/collection.hbs
+++ b/app/components/collection.hbs
@@ -1,6 +1,7 @@
 <Collection::Tabs
     @tabs={{this.tabs}}
     @onTabChange={{this.setActiveCollection}} 
+    @onTabRefresh={{this.refreshCollections}}
     @activeTab={{this.activeCollection.name}}/>
 
 {{yield this.activeCollection.items}}
