--- a/app/styles/components/_tabs.scss
+++ b/app/styles/components/_tabs.scss
@@ -1,28 +1,35 @@
 @import "../mixins";
 
 .collection-tabs {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 20px;
 }
 
 .collection-tabs__tabs {
   list-style: none;
   padding: 0;
   margin: 0;
-
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
   align-items: baseline;
+  overflow-x: auto;
 }
 
 .collection-tabs__refresh-button {
   @include reset-button-styles;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.collection-tabs__tabs,
+.collection-tabs__refresh-button {
+  padding-bottom: 10px;
 }
 
 .collection-tabs__tab {
-  margin-right: 10px;
-
+  margin-right: 30px;
   button {
     font-size: var(--fontsize-heading);
     font-weight: 700;
@@ -31,5 +38,7 @@
 }
 
 .collection-tabs__tab--active {
-  border-bottom: 2px solid var(--colour-highlight);
+  button {
+    border-bottom: 3px solid var(--colour-highlight);
+  }
 }
