--- a/app/styles/components/_tabs.scss
+++ b/app/styles/components/_tabs.scss
@@ -3,7 +3,9 @@
 .collection-tabs {
   display: grid;
   grid-template-columns: auto 1fr;
-  column-gap: 20px;
+  column-gap: 30px;
+  margin-top: 30px;
+  width: 100%;
 }
 
 .collection-tabs__tabs {
@@ -13,6 +15,7 @@
   display: flex;
   flex-direction: row;
   align-items: baseline;
+  justify-content: space-between;
   overflow-x: auto;
 }
 
