--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
 {{!-- {{This is where the menu would go}} --}}
 
+<button type="button" aria-label="menu">
+    🍔
+</button>
+
 <main class="container">
     {{outlet}}
 </main>
