working on the menu - still WIP

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -40,6 +40,12 @@ body {
   overflow-y: scroll; //Always show the horizontal scrollbar to stop layout jumps
 }
 
+body.menu-open,
+html.menu-open {
+  overflow: hidden;
+  height: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
