--- a/frontend/app/components/menu.hbs
+++ b/frontend/app/components/menu.hbs
@@ -1,3 +1,26 @@
-<button type="button" aria-label="menu">
-    🍔
-</button>
+<div class="menu__options">
+    <button class="menu__toggle-button" type="button" aria-label="toggle menu" {{on "click" this.toggleMenu}}>
+        {{#if this.isMenuOpen}}
+            ❌
+        {{else}}
+            🍔
+        {{/if}}
+    </button>
+
+    <ThemeSwitcher/>
+</div>
+<div class="menu {{if this.isMenuOpen "menu--open"}}">
+    <nav class="menu__navigation {{if this.isMenuOpen "menu__navigation--open"}}">
+        <div class="menu__links">
+            <section class="menu__new-collections">
+                <h1>New Collection</h1>
+            </section>
+            <section class="menu__my-collections">
+                <h1>My Collections</h1>
+            </section>
+            <section class="menu_import-export-collections">
+                <h1>Import/Export</h1>
+            </section>
+        </div>
+    </nav>
+</div>
