Slight adjustments to the menu

--- a/frontend/app/components/menu.hbs
+++ b/frontend/app/components/menu.hbs
@@ -10,16 +10,19 @@
     <ThemeSwitcher/>
 </div>
 <div class="menu {{if this.isMenuOpen "menu--open"}}">
-    <nav class="menu__navigation {{if this.isMenuOpen "menu__navigation--open"}}">
+    <nav class="menu__navigation">
         <div class="menu__links">
             <section class="menu__new-collections">
                 <h1>New Collection</h1>
+                
             </section>
             <section class="menu__my-collections">
                 <h1>My Collections</h1>
+
             </section>
             <section class="menu_import-export-collections">
                 <h1>Import/Export</h1>
+
             </section>
         </div>
     </nav>
