--- a/frontend/app/styles/components/_menu.scss
+++ b/frontend/app/styles/components/_menu.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .menu {
   position: absolute;
   top: 0;
@@ -12,6 +14,7 @@
 
 .menu--open {
   transform: translateX(0);
+  overflow-y: scroll;
 }
 
 .menu__options {
@@ -19,9 +22,53 @@
   display: flex;
   justify-content: space-between;
   z-index: 2;
+  width: calc(100% - 40px); //Full width, allowing for overall page padding.
+}
+
+.menu__toggle-button {
+  @include reset-button-styles();
 }
 
 .menu__navigation {
   display: flex;
   padding: 20px;
+}
+
+.menu__sections:last-child {
+  margin-bottom: 50px;
+}
+
+.menu__section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+
+  h1 {
+    font-size: var(--fontsize-menu-heading);
+  }
+}
+
+.menu__link {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+  svg {
+    margin-right: 5px;
+  }
+}
+
+.menu__collections {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+
+.menu__collection {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
