--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -37,6 +37,7 @@ body {
   }
 
   /*Global Styles*/
+  display: flex;
   color: var(--colour-text);
   background-color: var(--colour-background);
   padding: 20px;
@@ -64,5 +65,9 @@ html.menu-open {
   flex-direction: column;
   max-width: 640px;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 40px;
+
+  @media (min-width: 1280px) {
+    margin-left: 40px;
+  }
 }
