--- a/frontend/app/styles/components/_menu.scss
+++ b/frontend/app/styles/components/_menu.scss
@@ -8,21 +8,41 @@
   height: 100%;
   background-color: var(--colour-background);
   transform: translateX(-1000px);
-  transition: transform 0.35s ease-in-out;
+  transition: transform 0.15s ease-in-out;
   margin-top: 50px;
+
+  @media (min-width: 1280px) {
+    position: sticky;
+    top: 40px;
+    margin: 0;
+    flex: 0.5;
+  }
 }
 
 .menu--open {
   transform: translateX(0);
   overflow-y: scroll;
+
+  @media (min-width: 1280px) {
+    overflow-y: hidden;
+  }
 }
 
 .menu__options {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+
   display: flex;
   justify-content: space-between;
-  z-index: 2;
-  width: calc(100% - 40px); //Full width, allowing for overall page padding.
+
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  background-color: var(--colour-background);
 }
 
 .menu__toggle-button {
@@ -31,7 +51,7 @@
 
 .menu__navigation {
   display: flex;
-  padding: 20px;
+  padding: 20px 40px 0 40px;
 }
 
 .menu__sections:last-child {
