Animate 'left' property instead of transform
Also added beginnings of a menu test, and adjusted the index acceptance test to account for the changed label

--- a/frontend/app/components/menu.hbs
+++ b/frontend/app/components/menu.hbs
@@ -10,7 +10,7 @@
     <ThemeSwitcher/>
 </div>
 <div class="menu {{if this.isMenuOpen "menu--open"}}">
-    <nav class="menu__navigation">
+    <nav class="menu__navigation" aria-label="Application navigation">
         <div class="menu__sections">
             <section class="menu__section menu__new-collections">
                 <h1>New Collection</h1>
