--- a/frontend/app/styles/components/_menu.scss
+++ b/frontend/app/styles/components/_menu.scss
@@ -3,14 +3,16 @@
 .menu {
   position: absolute;
   top: 0;
-  left: -100%;
+  left: -100vw;
   width: 100%;
   height: 100%;
   background-color: var(--colour-background);
-  transition: left 0.15s ease-in-out;
+  transition: left 0.2s ease-in-out;
   margin-top: 50px;
 
-  @media (min-width: 1280px) {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  @media (min-width: 1024px) {
     position: fixed;
     top: 40px;
     width: auto;
@@ -21,11 +23,7 @@
 
 .menu--open {
   left: 0;
-  overflow-y: scroll;
-
-  @media (min-width: 1280px) {
-    overflow-y: hidden;
-  }
+  overflow-y: auto;
 }
 
 .menu__options {
