--- a/frontend/app/templates/new-collection.hbs
+++ b/frontend/app/templates/new-collection.hbs
@@ -1,3 +1,47 @@
-<button type="button" {{on "click" this.startNewCollection}}>
-    Start a new collection using mock data
+{{#if this.isLoading}}
+<div class="new-collection__loading-spinner">
+    ...Loading
+</div>
+{{else}}
+
+    <h1 class="new-collection__title">{{this.name}}</h1>
+
+    <section class="new-collection__input">
+
+    
+    <label>
+        Name
+        <Input @value={{this.name}} maxlength="25"/>
+    </label>
+
+    <label>
+        Add Feed
+        <div class="new-collection__add-feed-input">
+            <Input @value={{this.currentFeed}}/>
+            <button type="button" {{on "click" this.addFeed}}>
+                <Icon::Plus/>
+            </button>
+        </div>
+    </label>
+    </section>
+
+<section class="new-collection__feeds">
+    <h2 class="new-collection__feeds__title">Feeds</h2>
+    <ul>
+        {{#each this.feeds as |feed|}}
+            <li>
+                <button type="button" class="new-collection__remove-feed-button" {{on "click" (fn this.removeFeed feed)}}>
+                    <Icon::Cross/>
+                </button>
+                {{feed}}
+            </li>
+        {{/each}}
+    </ul>
+</section>
+
+<button type="button" class="new-collection__create-collection-button" {{on "click" this.createNewCollection}}>
+    Create Collection
 </button>
+{{/if}}
+
+
