--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -24,17 +24,21 @@ body {
   --colour-background: #fff;
   --colour-text: #2c3e50;
   --colour-highlight: #e67e22;
+  --colour-cta: #27ae60;
+  --colour-cta-text: #fff;
 
   @media (min-width: $brk-small) {
     --fontsize-heading: 1.2em;
     --fontsize-body: 1em;
     --fontsize-sub-text: 0.8em;
+    --fontsize-menu-heading: 1.4em;
   }
 
   @media (min-width: $brk-medium) {
     --fontsize-heading: 1.4em;
     --fontsize-body: 1.2em;
     --fontsize-sub-text: 1em;
+    --fontsize-menu-heading: 1.6em;
   }
 
   /*Global Styles*/
@@ -66,5 +70,5 @@ html.menu-open {
   flex-direction: column;
   max-width: 640px;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 80px;
 }
