--- a/frontend/app/styles/components/_menu.scss
+++ b/frontend/app/styles/components/_menu.scss
@@ -9,6 +9,7 @@
   background-color: var(--colour-background);
   transition: left 0.2s ease-in-out;
   margin-top: 50px;
+  z-index: 10;
 
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
@@ -31,7 +32,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: 11;
 
   display: flex;
   justify-content: space-between;
@@ -84,6 +85,8 @@
   margin: 0;
   list-style: none;
   padding: 0;
+  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 .menu__collection {
