--- a/frontend/app/styles/templates/_new-collection.scss
+++ b/frontend/app/styles/templates/_new-collection.scss
@@ -2,23 +2,34 @@
 
 .new-collection__title {
   position: fixed;
-  top: 60px;
-  font-size: var(--fontsize-heading);
-  z-index: -1;
+  top: 30px;
+  font-size: var(--fontsize-menu-heading);
+  text-align: center;
+  width: 100%;
+  left: 0;
+  overflow-wrap: break-word;
+  word-break: break-all;
+  padding-top: 20px;
+  z-index: 0;
+  background: var(--colour-background);
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .new-collection__input {
   display: flex;
   flex-direction: column;
-  margin-top: 60px;
+  margin-top: 20px;
 
   label {
     font-weight: 500;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
 
   input {
@@ -47,6 +58,11 @@
   }
 }
 
+.new-collection__feeds {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
 .new-collection__feeds > ul {
   list-style: none;
   padding: 0;
@@ -71,4 +87,14 @@
   svg {
     stroke: red;
   }
+}
+
+.new-collection__create-collection-button {
+  background: var(--colour-cta);
+  color: var(--colour-cta-text);
+  font-weight: 700;
+  border: 0;
+  outline: 0;
+  padding: 15px;
+  border-radius: 3px;
 }
