Made homepage link a LinkTo component

--- a/frontend/app/components/menu.hbs
+++ b/frontend/app/components/menu.hbs
@@ -6,7 +6,7 @@
             <Icon::Hamburger/>
         {{/if}}
     </button>
-    <a href="/">My Feed</a>
+    <LinkTo @route="index">My Feed</LinkTo>
     <ThemeSwitcher/>
 </div>
 <div class="menu {{if this.isMenuOpen "menu--open"}}">
